--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj.filters
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj.filters
@@ -239,10 +239,10 @@
     <ClCompile Include="..\..\..\..\src\utility\unicode.cpp">
       <Filter>src\utility</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\src\utility\unicode_streams.cpp">
+    <ClCompile Include="..\..\..\..\src\utility\time.cpp">
       <Filter>src\utility</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\src\utility\time.cpp">
+    <ClCompile Include="..\..\..\..\src\utility\unicode_streambuf.cpp">
       <Filter>src\utility</Filter>
     </ClCompile>
   </ItemGroup>
@@ -442,10 +442,10 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\unicode.hpp">
       <Filter>include\bitcoin\utility</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\unicode_streams.hpp">
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\time.hpp">
       <Filter>include\bitcoin\utility</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\time.hpp">
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\unicode_streambuf.hpp">
       <Filter>include\bitcoin\utility</Filter>
     </ClInclude>
   </ItemGroup>
