--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj.filters
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj.filters
@@ -72,6 +72,9 @@
     <Filter Include="include\bitcoin\impl\trie">
       <UniqueIdentifier>{b2a71c20-6828-4d21-a99b-afb8645d76b4}</UniqueIdentifier>
     </Filter>
+    <Filter Include="include\bitcoin\trie">
+      <UniqueIdentifier>{58b24345-6b1f-406b-85f6-a915056f4577}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -260,20 +263,20 @@
     <ClCompile Include="..\..\..\..\src\utility\time.cpp">
       <Filter>src\utility</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\src\config\directory.cpp">
+      <Filter>src\config</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\..\..\src\utility\unicode_ostream.cpp">
-      <Filter>src\utility</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\..\src\utility\unicode_istream.cpp">
-      <Filter>src\utility</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\..\src\utility\console_streambuf.cpp">
       <Filter>src\utility</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\..\src\utility\unicode_streambuf.cpp">
       <Filter>src\utility</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\src\config\directory.cpp">
-      <Filter>src\config</Filter>
+    <ClCompile Include="..\..\..\..\src\utility\console_streambuf.cpp">
+      <Filter>src\utility</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\src\utility\unicode_istream.cpp">
+      <Filter>src\utility</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -489,6 +492,21 @@
     </ClInclude>
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\directory.hpp">
       <Filter>include\bitcoin\config</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\trie\trie_structure_node.hpp">
+      <Filter>include\bitcoin\trie</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\trie\trie_value_node.hpp">
+      <Filter>include\bitcoin\trie</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\trie\binary_trie.hpp">
+      <Filter>include\bitcoin\trie</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\trie\trie_iterator.hpp">
+      <Filter>include\bitcoin\trie</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\trie\trie_reverse_iterator.hpp">
+      <Filter>include\bitcoin\trie</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
