Swap fstream factory for class wrapper, reorg unicode files.

--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
@@ -104,17 +104,19 @@
     <ClCompile Include="..\..\..\..\src\script.cpp" />
     <ClCompile Include="..\..\..\..\src\stealth.cpp" />
     <ClCompile Include="..\..\..\..\src\transaction.cpp" />
+    <ClCompile Include="..\..\..\..\src\unicode\console_streambuf.cpp" />
+    <ClCompile Include="..\..\..\..\src\unicode\ifstream.cpp" />
+    <ClCompile Include="..\..\..\..\src\unicode\ofstream.cpp" />
+    <ClCompile Include="..\..\..\..\src\unicode\unicode.cpp" />
+    <ClCompile Include="..\..\..\..\src\unicode\unicode_istream.cpp" />
+    <ClCompile Include="..\..\..\..\src\unicode\unicode_ostream.cpp" />
+    <ClCompile Include="..\..\..\..\src\unicode\unicode_streambuf.cpp" />
     <ClCompile Include="..\..\..\..\src\utility\binary.cpp" />
-    <ClCompile Include="..\..\..\..\src\utility\console_streambuf.cpp" />
     <ClCompile Include="..\..\..\..\src\utility\string.cpp" />
     <ClCompile Include="..\..\..\..\src\utility\logger.cpp" />
     <ClCompile Include="..\..\..\..\src\utility\threadpool.cpp" />
     <ClCompile Include="..\..\..\..\src\utility\time.cpp" />
     <ClCompile Include="..\..\..\..\src\utility\timed_section.cpp" />
-    <ClCompile Include="..\..\..\..\src\utility\unicode.cpp" />
-    <ClCompile Include="..\..\..\..\src\utility\unicode_istream.cpp" />
-    <ClCompile Include="..\..\..\..\src\utility\unicode_ostream.cpp" />
-    <ClCompile Include="..\..\..\..\src\utility\unicode_streambuf.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\address.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\hd_keys.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\key_formats.cpp" />
@@ -162,6 +164,13 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\trie\trie_reverse_iterator.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\trie\trie_structure_node.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\trie\trie_value_node.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\unicode\console_streambuf.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\unicode\ifstream.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\unicode\ofstream.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\unicode\unicode.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\unicode\unicode_istream.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\unicode\unicode_ostream.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\unicode\unicode_streambuf.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\array_slice.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\assert.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\async_parallel.hpp" />
@@ -177,11 +186,6 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\threadpool.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\time.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\timed_section.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\unicode.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\unicode_istream.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\unicode_ostream.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\console_streambuf.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\unicode_streambuf.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\weak_bind.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\version.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\address.hpp" />
