--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj.filters
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj.filters
@@ -75,6 +75,12 @@
     <Filter Include="include\bitcoin\trie">
       <UniqueIdentifier>{58b24345-6b1f-406b-85f6-a915056f4577}</UniqueIdentifier>
     </Filter>
+    <Filter Include="include\bitcoin\unicode">
+      <UniqueIdentifier>{0d660b13-1283-47a3-b7b0-a6bcc7378dd1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\unicode">
+      <UniqueIdentifier>{c863e8b4-d2e2-4f76-9482-1bf25cd830f7}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -257,26 +263,32 @@
     <ClCompile Include="..\..\..\..\src\utility\string.cpp">
       <Filter>src\utility</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\src\utility\unicode.cpp">
-      <Filter>src\utility</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\..\src\utility\time.cpp">
       <Filter>src\utility</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\..\src\config\directory.cpp">
       <Filter>src\config</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\src\utility\unicode_ostream.cpp">
-      <Filter>src\utility</Filter>
+    <ClCompile Include="..\..\..\..\src\unicode\unicode_ostream.cpp">
+      <Filter>src\unicode</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\src\utility\unicode_streambuf.cpp">
-      <Filter>src\utility</Filter>
+    <ClCompile Include="..\..\..\..\src\unicode\unicode_streambuf.cpp">
+      <Filter>src\unicode</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\src\utility\console_streambuf.cpp">
-      <Filter>src\utility</Filter>
+    <ClCompile Include="..\..\..\..\src\unicode\console_streambuf.cpp">
+      <Filter>src\unicode</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\src\utility\unicode_istream.cpp">
-      <Filter>src\utility</Filter>
+    <ClCompile Include="..\..\..\..\src\unicode\unicode.cpp">
+      <Filter>src\unicode</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\src\unicode\unicode_istream.cpp">
+      <Filter>src\unicode</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\src\unicode\ifstream.cpp">
+      <Filter>src\unicode</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\src\unicode\ofstream.cpp">
+      <Filter>src\unicode</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -472,22 +484,7 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\collection.hpp">
       <Filter>include\bitcoin\utility</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\unicode.hpp">
-      <Filter>include\bitcoin\utility</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\time.hpp">
-      <Filter>include\bitcoin\utility</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\unicode_ostream.hpp">
-      <Filter>include\bitcoin\utility</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\unicode_istream.hpp">
-      <Filter>include\bitcoin\utility</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\console_streambuf.hpp">
-      <Filter>include\bitcoin\utility</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\unicode_streambuf.hpp">
       <Filter>include\bitcoin\utility</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\directory.hpp">
@@ -507,6 +504,27 @@
     </ClInclude>
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\trie\trie_reverse_iterator.hpp">
       <Filter>include\bitcoin\trie</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\unicode\unicode.hpp">
+      <Filter>include\bitcoin\unicode</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\unicode\unicode_istream.hpp">
+      <Filter>include\bitcoin\unicode</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\unicode\unicode_ostream.hpp">
+      <Filter>include\bitcoin\unicode</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\unicode\unicode_streambuf.hpp">
+      <Filter>include\bitcoin\unicode</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\unicode\console_streambuf.hpp">
+      <Filter>include\bitcoin\unicode</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\unicode\ifstream.hpp">
+      <Filter>include\bitcoin\unicode</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\unicode\ofstream.hpp">
+      <Filter>include\bitcoin\unicode</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
