--- a/libbitcoin.pc.in
+++ b/libbitcoin.pc.in
@@ -29,9 +29,9 @@ Requires: libsecp256k1 >= 0.0.1
 
 # Include directory and any other required compiler flags.
 #------------------------------------------------------------------------------
-Cflags: -I${includedir} @testnet@ @boost_CPPFLAGS@ @iconv_CPPFLAGS@ @pthread_CPPFLAGS@
+Cflags: -I${includedir} @testnet@ @boost_CPPFLAGS@ @pthread_CPPFLAGS@
 
 # Lib directory, lib and any required that do not publish pkg-config.
 #------------------------------------------------------------------------------
-Libs: -L${libdir} -lbitcoin @boost_LDFLAGS@ @boost_chrono_LIBS@ @boost_date_time_LIBS@ @boost_filesystem_LIBS@ @boost_locale_LIBS@ @boost_program_options_LIBS@ @boost_regex_LIBS@ @boost_system_LIBS@ @iconv_LIBS@ @pthread_LIBS@ @rt_LIBS@
+Libs: -L${libdir} -lbitcoin @boost_LDFLAGS@ @boost_chrono_LIBS@ @boost_date_time_LIBS@ @boost_filesystem_LIBS@ @boost_locale_LIBS@ @boost_program_options_LIBS@ @boost_regex_LIBS@ @boost_system_LIBS@ @pthread_LIBS@ @rt_LIBS@
 
