--- a/configure.ac
+++ b/configure.ac
@@ -97,7 +97,7 @@ AC_ARG_WITH([examples],
 AC_MSG_RESULT([$with_examples])
 AM_CONDITIONAL([WITH_EXAMPLES], [test x$with_examples != xno])
 
-# Implement --with-icu and define BOOST_HAS_ICU.
+# Implement --with-icu and define BOOST_HAS_ICU and output ${icu}.
 #------------------------------------------------------------------------------
 AC_MSG_CHECKING([--with-icu option])
 AC_ARG_WITH([icu],
@@ -107,6 +107,7 @@ AC_ARG_WITH([icu],
     [with_icu=no])
 AC_MSG_RESULT([$with_icu])
 AS_CASE([${with_icu}], [yes], AC_DEFINE([BOOST_HAS_ICU]))
+AS_CASE([${with_icu}], [yes], AC_SUBST([icu], [-DBOOST_HAS_ICU]))
 
 # Implement --enable-ndebug and define NDEBUG.
 #------------------------------------------------------------------------------
