--- a/libbitcoin.pc.in
+++ b/libbitcoin.pc.in
@@ -29,7 +29,7 @@ Requires: @icu_i18n_PKG@ libsecp256k1 >= 0.0.1
 
 # Include directory and any other required compiler flags.
 #------------------------------------------------------------------------------
-Cflags: -I${includedir} @testnet@ @boost_CPPFLAGS@ @pthread_CPPFLAGS@
+Cflags: -I${includedir} @icu@ @testnet@ @boost_CPPFLAGS@ @pthread_CPPFLAGS@
 
 # Lib directory, lib and any required that do not publish pkg-config.
 #------------------------------------------------------------------------------
