Suppress boost 1.55 deprecation warnings in gcc.

--- a/configure.ac
+++ b/configure.ac
@@ -259,6 +259,12 @@ AS_CASE([${CC}], [*clang*],
     [AX_CHECK_COMPILE_FLAG([-Wno-deprecated-register],
         [CXXFLAGS="$CXXFLAGS -Wno-deprecated-register"])])
 
+# Clean up boost 1.55 headers. Enabled in gcc only.
+#------------------------------------------------------------------------------
+AS_CASE([${CC}], [*gcc*],
+    [AX_CHECK_COMPILE_FLAG([-Wno-deprecated-declarations],
+        [CXXFLAGS="$CXXFLAGS -Wno-deprecated-declarations"])])
+
 # Warn on all stuff.
 #------------------------------------------------------------------------------
 AS_CASE([${CC}], [*],
