Add from_data methods, remove equivalent constructors.

--- a/Makefile.am
+++ b/Makefile.am
@@ -356,6 +356,8 @@ include_bitcoin_bitcoin_utility_HEADERS = \
     include/bitcoin/bitcoin/utility/binary.hpp \
     include/bitcoin/bitcoin/utility/collection.hpp \
     include/bitcoin/bitcoin/utility/data.hpp \
+    include/bitcoin/bitcoin/utility/data_buffer.hpp \
+    include/bitcoin/bitcoin/utility/data_stream_host.hpp \
     include/bitcoin/bitcoin/utility/decorator.hpp \
     include/bitcoin/bitcoin/utility/deserializer.hpp \
     include/bitcoin/bitcoin/utility/endian.hpp \
