--- a/Makefile.am
+++ b/Makefile.am
@@ -202,11 +202,8 @@ test_libbitcoin_test_SOURCES = \
     test/printer.cpp \
     test/random.cpp \
     test/satoshi_words.cpp \
-    test/script.cpp \
-    test/script.hpp \
     test/script_number.cpp \
     test/script_number.hpp \
-    test/serialize.cpp \
     test/stealth.cpp \
     test/stealth_address.cpp \
     test/thread.cpp \
@@ -214,8 +211,13 @@ test_libbitcoin_test_SOURCES = \
     test/unicode_istream.cpp \
     test/unicode_ostream.cpp \
     test/uri.cpp \
+    test/chain/block.cpp \
     test/chain/point.cpp \
-    test/utility/endian.cpp
+    test/chain/script.cpp \
+    test/chain/script.hpp \
+    test/chain/transaction.cpp \
+    test/utility/endian.cpp \
+    test/utility/serializer.cpp
 
 endif WITH_TESTS
 
