Add boost.iostreams dependency, replace data_buffer derived std::streambuf with data_source template for use with iostreams.

--- a/configure.ac
+++ b/configure.ac
@@ -171,6 +171,10 @@ AX_BOOST_FILESYSTEM
 AC_SUBST([boost_filesystem_LIBS], [${BOOST_FILESYSTEM_LIB}])
 AC_MSG_NOTICE([boost_filesystem_LIBS : ${boost_filesystem_LIBS}])
 
+AX_BOOST_IOSTREAMS
+AC_SUBST([boost_iostreams_LIBS], [${BOOST_IOSTREAMS_LIB}])
+AC_MSG_NOTICE([boost_iostreams_LIBS : ${boost_iostreams_LIBS}])
+
 AX_BOOST_LOCALE
 AC_SUBST([boost_locale_LIBS], [${BOOST_LOCALE_LIB}])
 AC_MSG_NOTICE([boost_locale_LIBS : ${boost_locale_LIBS}])
